# toolkit-plugin-template

./: .gitignore  CMakeLists.txt  README.md  TemplateModelExtension.cc  TemplateModelExtension.h  TemplateModelExtention.cc  TemplateModelExtention.h  TemplatePlugin.cc  TemplatePlugin.h  create_plugin.py  metadata.json
