PROJECT(TemplatePlugin)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
	
SET(TemplatePlugin_SRCS
	TemplatePlugin.cc
)

SET(TemplatePlugin_MOC_HDRS
	include/toolkit_interfaces.h
	TemplatePlugin.h
)

SET( QT_USE_QTXML TRUE )
SET( QT_WRAP_CPP TRUE )
SET(CMAKE_AUTORCC ON )
SET(CMAKE_AUTOUIC ON )
SET(CMAKE_AUTOMOC ON )

SET(TOOLKIT_SOURCE_PATH "" CACHE PATH "Path to Toolkit Source Code")
SET(TOOLKIT_BUILD_PATH "" CACHE PATH "Path to Toolkit Build Dir")

if(TOOLKIT_BUILD_PATH)
else()
  MESSAGE( FATAL_ERROR "You need to supply the path to the build dir of the toolkit, since you will require certain headers generated during the build process!")
endif()

if(TOOLKIT_SOURCE_PATH)
else()
	MESSAGE( FATAL_ERROR "You need to supply the path to the toolkit source code")
endif()

SET(CUSTOM_QT_PATH "" CACHE PATH "Path to Qt Installation")
IF (CUSTOM_QT_PATH)
	SET(CMAKE_CXX_STANDARD_REQUIRED ON)
	SET(CMAKE_SKIP_BUILD_RPATH FALSE)
	SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
	SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
	SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
	SET(CMAKE_PREFIX_PATH "${CUSTOM_QT_PATH}/cmake")
ENDIF(CUSTOM_QT_PATH)

SET( PLUGIN_INSTALL_DIR share/ORB/rbdl-toolkit/plugins )

FIND_PACKAGE (Qt5 REQUIRED COMPONENTS Core Gui Widgets 3DCore 3DExtras 3DRender 3DInput)
FIND_PACKAGE (RBDL COMPONENTS LUAMODEL REQUIRED)
FIND_PACKAGE (Eigen3 REQUIRED)
	
INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES( ${TOOLKIT_BUILD_PATH} )
INCLUDE_DIRECTORIES( ${TOOLKIT_BUILD_PATH}/include )
INCLUDE_DIRECTORIES( ${TOOLKIT_SOURCE_PATH} )
INCLUDE_DIRECTORIES (${TOOLKIT_SOURCE_PATH}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)

ADD_LIBRARY (templateplugin SHARED ${TemplatePlugin_SRCS})

TARGET_LINK_LIBRARIES (templateplugin 
	${QT_LIBRARIES} 
	${QT_QTXML_LIBRARY} 
	Qt5::Core
	Qt5::Gui
	Qt5::Widgets
	Qt5::3DCore
	Qt5::3DExtras
	Qt5::3DRender
	Qt5::3DInput
	${RBDL_LIBRARY}
)

INSTALL( TARGETS templateplugin LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})	
